--- a/github_repo/Projet4__ChercheStage/connexion_ent.css
+++ b/github_repo/Projet4__ChercheStage/connexion_ent.css
@@ -299,7 +299,7 @@ button[type="reset"]:hover{
 
 button[type="submit"]{
 	background-color: #2368e1;
-	color: white;
+	color: white!important;
 	font-weight: 600;
 	border: 1px solid transparent;
 }
