--- a/github_repo/Projet4__ChercheStage/inscription_etu.css
+++ b/github_repo/Projet4__ChercheStage/inscription_etu.css
@@ -49,6 +49,10 @@ h3{
 .grey{ 
     color: #ffffff; 
 }
+a{
+	color: white;
+    text-decoration: none;    
+}
  
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*header*/
@@ -296,7 +300,7 @@ button[type="reset"]:hover{
 
 button[type="submit"]{
 	background-color: #2368e1;
-	color: white;
+	color: white!important;
 	font-weight: 600;
 	border: 1px solid transparent;
 }
