--- a/github_repo/Projet4__ChercheStage/recherche_etu.css
+++ b/github_repo/Projet4__ChercheStage/recherche_etu.css
@@ -37,24 +37,10 @@ h3{
     color: #ffffff
 }
 
-.small a {
-    color: white !important; 
-    text-decoration: none;    
-}
-
-.small a:hover {
-    text-decoration: underline; 
-}
-
 .grey{ 
     color: #ffffff; 
 }
  
-a{
-	color: #ffffff;
-    text-decoration: none;
-}
-
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*header*/
 
@@ -169,7 +155,6 @@ header .navitems{
 	font-weight: 100;
 }
 
-
 /* Breadcrumb */
 header nav ol.breadcrumb{
 	margin: 10px 5px;
@@ -179,7 +164,7 @@ header nav ol.breadcrumb{
     padding: .75rem 1rem;
     margin-bottom: 1rem;
     list-style: none;
-    background-color: #c0e2ff;
+    background-color: #e9ecef;
     border-radius: .25rem;
 	font-size: 75%;
 }
@@ -209,7 +194,7 @@ header nav.breadcrumb ol li.breadcrumb-item.active{
 /*Body*/
 
 body{
-	background-color: #000000;
+	background-color: #ffffff;
 	margin: 0;
     font-family: arial;
 }
@@ -227,6 +212,41 @@ main{
 }
 
 
+.search-container{
+    background: rgb(255, 255, 255);
+
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 1 3 10px rgba(1, 1, 1, 0.1);
+    text-align: center;
+}
+
+.search-input {
+
+    width: 300px;
+    padding: 11px 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.search-button {
+   
+    padding: 10px 70px;
+    border: none;
+    background-color: #007BFF;
+    color: white;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.search-button:hover {
+    
+    background-color: #0056b3;
+}
+
 /* Side-by-side elements using Flex method*/
 .flex-container{
 	display: flex;
@@ -241,11 +261,12 @@ main{
 }
 
 /* Forms */
+
 label{
 	font-weight: 900;
     text-transform: uppercase;
     font-size: 0.8em;
-    color: #ffffff;
+    color: #000000;
     
 }
 
@@ -306,7 +327,7 @@ button[type="reset"]:hover{
 
 button[type="submit"]{
 	background-color: #2368e1;
-	color: white!important;
+	color: white;
 	font-weight: 600;
 	border: 1px solid transparent;
 }
@@ -394,7 +415,7 @@ input[type="radio"]{
 
 button {
     text-transform: uppercase;
-    background-color: #2368e1;
+    background-color: #030303;
     color: rgb(0, 0, 0);
     font-weight: 600;
     border: 1px solid transparent;
@@ -404,7 +425,7 @@ button {
 }
   
 button[type="reset"] {
-    background-color: #2368e1;
+    background-color: #080808;
     color: #ffffff;
 }
   
@@ -448,33 +469,24 @@ button[type="reset"], button[type="submit"] {
     width: 150px;
 }
 
-/* === Message d'erreur === */
-.error {
-    color: #ffed00;  /* Couleur des messages d'erreur en jaune */
-}
 
-/* Changer la couleur du contour (outline) lorsqu'un champ est focus */
-input:focus, select:focus, textarea:focus {
-    outline: 2px solid #ffed00;  /* Couleur jaune pour le contour */
-    border-color: #ffed00; /* Couleur jaune pour la bordure */
-}
+/*body*/
 
-/* Optionnel : Changer la couleur de la bordure pour les champs invalides lorsqu'ils sont en focus */
-input:invalid:focus, select:invalid:focus, textarea:invalid:focus {
-    border-color: #ffed00;  /* Jaune pour la bordure des champs invalides */
-    outline: none; /* Éviter l'outline par défaut du navigateur */
-}
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*Footer*/
 
 footer{
-	background-color: black;
+	background-color: rgb(0, 0, 0);
     color: white;
-    padding: 15px;
+    padding: 25;
     margin-top: 25px;
     font-size: 0.8em;
 	font-style: italic;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
 .footer-logo {
